# SCR

lab1/: workpls.ioc2
lab1/workpls_cmake/: main.c
lab1/workpls_cmake/middleware/freertos/: CMakeLists.txt  LICENSE.md  ST_Release_Notes.md
lab2/: .cproject  .project  lab2 debug_GCC_NUCLEO-C562RE.launch
lab2/workpls_cmake/: CMakePresets.json
lab2/workpls_cmake/cmake/: components.cmake  target.cmake
lab2/workpls_cmake/user_modifiable/_debug_GCC_NUCLEO-C562RE/: Pre_Include_Global.h
lab3/: .cproject  .project  lab3 debug_GCC_NUCLEO-C562RE.launch
lab3/workpls_cmake/: CMakeLists.txt  main.c
lab3/workpls_cmake/cmake/: files.cmake
lab4V2/: .cproject  .project  lab4V2 debug_GCC_NUCLEO-C562RE.launch
lab4V2/workpls_cmake/: CMakeLists.txt
lab4V2/workpls_cmake/cmake/: components.cmake  flags.cmake
lab4V2/workpls_cmake/middleware/freertos/: SW_Security_Level.md
lab4V2/workpls_cmake/user_modifiable/Device/STM32C562RET6/: startup_stm32c562xx.c
lab5V2/: .cproject  .project  lab5V2 debug_GCC_NUCLEO-C562RE.launch
lab5V2/workpls_cmake/cmake/: components.cmake
lab5V2/workpls_cmake/middleware/freertos/: History.txt
lab5V2/workpls_cmake/user_modifiable/_debug_GCC_NUCLEO-C562RE/: RTE_Components.h
